--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,12 @@ environment:
 dependencies:
   animate_do: ^3.3.4
   cupertino_icons: ^1.0.6
-  
   flutter:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.7
-  
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_lints: ^3.0.0
