--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   flutter_riverpod: ^2.5.1
   flutter_speed_dial: ^7.0.0
+  gap: ^3.0.1
   go_router: ^14.2.7
   scrollable_positioned_list: ^0.3.8
 
